--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
 								</div>
 								<div class="h-desc"></div>
 							</div>
-							<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
+							<div class="h-item y-l" style="left:23%; animation-delay:0.36s">
 								<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
 									Chinese Symbols Are Chinese Design.
 								</div>
 								<div class="h-desc"></div>
 							</div>
-							<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
+							<div class="h-item y-h" style="left:53%; animation-delay:0.36s">
 								<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
 									Designers Are Drawing-Monkeys.
 								</div>
 								<div class="h-desc"></div>
 							</div>
-							<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
+							<div class="h-item y-l" style="left:73%; animation-delay:0.36s">
 								<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
 									Technology Prevailed Our Weackness
 								</div>
@@ -154,43 +154,30 @@
 							<div class="h-year" style="left:3%; animation-delay:0.48s">
 								<div class="h-year-title">2018</div> 
 							</div>
-							<div class="h-year" style="left:18%; animation-delay:0.48s">
+							<div class="h-year" style="left:23%; animation-delay:0.48s">
 								<div class="h-year-title">2019</div> 
 							</div>
-							<div class="h-year" style="left:33%; animation-delay:0.48s">
+							<div class="h-year" style="left:53%; animation-delay:0.48s">
 								<div class="h-year-title">2020</div> 
 							</div>
-							<div class="h-year" style="left:48%; animation-delay:0.48s">
+							<div class="h-year" style="left:73%; animation-delay:0.48s">
 								<div class="h-year-title">2021</div> 
 							</div>
-							<div class="h-year" style="left:63%; animation-delay:0.48s">
+							<div class="h-year" style="left:93%; animation-delay:0.48s">
 								<div class="h-year-title">2022</div> 
 							</div>
-							<div class="h-year" style="left:78%; animation-delay:0.48s">
-								<div class="h-year-title">2023</div> 
 							</div>
 						</div>
 					</div>
 				</div>
 
 
-
-				<div class="projects">
-					<h2>Projects Gallery Under Construction 🛠️</h2>
-					<p>Expected to complete in this summer</p>
-					<!-- <div class="product-container">
-						<div id="TCL_Cover"><a href="TCL.html"><img src="imgs/TCL_Cover.png" alt="TCL_Cover"></a></div>
-						<div id="Jewelry_Cover"><a href="Jewelry.html"><img src="imgs/Jewelry_Cover.png" alt="Jewelry_Cover"></a></div>
-						<div id="Badge_Cover"><a href="Badge.html"><img src="imgs/Badge_Cover.jpg" alt="Badge_Cover"></a></div>
-						<div id="CU_Cover"><a href="CU.html"><img src="imgs/CU_Cover.png" alt="CU_Cover"></a></div>
-					</div> -->
-				</div>
 			</div>		
 
 		</main>
 		<footer class="footer">
 			<div class="inner-footer">
-				@2022 coded by Chuxuan(Claudius) Ma
+				@2022 built by Chuxuan(Claudius) Ma
 			</div>
 		</footer>
 
